SERVER-7887 fix windows test failure